# coderunner

./: .gitignore  CAMBIOS_ESTETICA_PIXEL_ART.md  ESTRUCTURA_REFACTORIZADA.md  EVALUACION_RUBRICA.md  FUENTE_PRESS_START_2P.md  FUNCIONALIDAD_ADMINISTRATIVA.md  GUIA_EXPOSICION.md  GUIA_USO_MUSICA.py  HISTORIAL_GIT.md  MEJORAS_INTERFAZ.md  MENU_PAUSA_RESUMEN.md  MENU_SIMPLIFICADO.md  MOVIMIENTO_SUAVE_RESUMEN.md  README.md  REFACTORIZACION.md  RESUMEN_TESTS.md  SISTEMA_MUSICA.md  descargar_fuente.py  main.py  mypy.ini  proyecto.txt  pyproject.toml  requirements.txt  test_admin.py  test_copia_laberinto.py  test_demo_ui.py  test_esfera_pulsante.py  test_esferas_ambas.py  test_estetica_griega.py  test_laberinto_estetica.py  test_menu_pausa.py  test_menu_simplificado.py  test_movimiento_suave.py  test_musica.py  verificar_fuentes.py
docs/: ESFERAS_PULSANTES.md  ESTETICA_GRIEGA.md  ESTETICA_LABERINTO.md  MANUAL_USUARIO.md  MOVIMIENTO_SUAVE.md  UI_DESIGN_GUIDE.md  UI_PIXEL_ART_README.md
src/: a.json  laberinto.json  main.py  utils.py
src/Prototipo3/: juego.py  jugador.py  laberinto.py
src/config/: __init__.py  colores.py  config.py
src/data/: laberinto1.json  laberinto_ejemplo.json  progreso_guardado.json
src/docs/: Casos_de_Prueba.md  Historias de usuario.md
src/entities/: __init__.py  computadora.py  jugador.py
src/game/: __init__.py  config.py  constants.py  gestor_obsequios.py  interfaz.py  juego.py  (+3 more)
theseus_runner/: EJEMPLOS_INTEGRACION.py  FAQ.md  INDEX.md  README.md  RESUMEN_COMPLETO.md  demo.py  generate_all.py  palette.py  quickstart.sh  requirements.txt
(+129 files in other folders)
